# warp-journal

./: .flake8  .gitignore  LICENSE  README.md  client.py  database.py  pyproject.toml  requirements.txt  server.py  util.py  warp-journal.nsi  warp-journal.py
3rd-party-licenses/: LICENSE_bottlepy
frontend/: index.html  style.css
warp_journal/: __main__.py  client.py  database.py  enums.py  error.py  exceptions.py  paths.py  server.py  url_util.py  util.py
warp_journal/frontend/: index.html  script.js  style.css
