[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "warp-journal"
version = "1.2.0"
description = "Honkai: Star Rail gacha tracker and analysis."
authors = ["Ennea"]
license = "MIT"
readme = "README.md"
packages = [{include = "warp_journal"}]

[tool.poetry.scripts]
warp-journal = 'warp_journal.__main__:main'

[tool.poetry.dependencies]
python = "^3.9.0"

bottle = "^0.12.25"
gevent = "^22.10.2"
gevent-websocket = "^0.10.1"
greenlet = "^3.0.0"
"zope.event" = "^4.6"
"zope.interface" = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.pyright]
defineConstant = { DEBUG = true }

reportMissingTypeStubs = "information"
reportImportCycles = "warning"

pythonVersion = "3.9"
pythonPlatform = "All"

# Note: If you're using a non-standard path for your virtual environment,
# which is the default configuraation for poetry, you need to tell pyright where it can be found.
# Alternatively, you can tell poetry to use a virtual env inside the project folder:
# `poetry config --local virtualenvs.in-project true`
